--- a/web/dart_js_interop_example.html
+++ b/web/dart_js_interop_example.html
@@ -14,5 +14,6 @@
     <script src="hugs.js"></script>
     <script type="application/dart" src="dart_js_interop_example.dart"></script>
     <script src="packages/browser/dart.js"></script>
+    <script src="packages/browser/interop.js"></script>
   </body>
 </html>
